Really ensure we don't use two lines for the senders line in collapsed messages.

--- a/skin/multimessageview.css
+++ b/skin/multimessageview.css
@@ -37,6 +37,7 @@
 
 body {
   background-color: #f3f3f4;
+  overflow-y: scroll; /* See comments in selectionsummaries.js */
 }
 
 /* Cancels the style from sharedsummary.css */
@@ -177,30 +178,16 @@ a {
   font-size: 0px;
 }
 
-.message.collapsed .recipients > span {
+/* Use short names in condensed view, use full names otherwise */
+
+.message.collapsed .too-long {
   display: none;
 }
 
-/* If there's a sixth element (it's a comma) this means there's at least a
- * seventh one so it's legitimate to add an ellipsis after that. */
-.message.collapsed .recipients > span:nth-child(1),
-.message.collapsed .recipients > span:nth-child(2),
-.message.collapsed .recipients > span:nth-child(3),
-.message.collapsed .recipients > span:nth-child(4),
-.message.collapsed .recipients > span:nth-child(5),
-.message.collapsed .recipients > span:nth-child(6),
-.message.collapsed .recipients > span:nth-child(7),
-.message.collapsed .recipients > span:nth-child(8),
-.message.collapsed .recipients > span:nth-child(9),
-.message.collapsed .recipients > span:nth-child(10) {
-  display: inline;
+.message.collapsed .last-comma:after {
+  content: " …";
 }
 
-.message.collapsed .recipients > span:nth-child(10):after {
-  content: "...";
-}
-
-/* Use short names in condensed view, use full names otherwise */
 .short-name {
   display: none;
 }
